@@ -10,6 +10,7 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * 默认的数据权限控制处理器
@@ -78,13 +79,13 @@ public class DefaultDataPermissionHandler implements DataPermissionHandler {
 		// 当指定了只包含的资源时，只对该资源的DataScope
 		if (dataPermissionRule.includeResources().length > 0) {
 			Set<String> a = new HashSet<>(Arrays.asList(dataPermissionRule.includeResources()));
-			return dataScopes.stream().filter(x -> a.contains(x.getResource())).toList();
+			return dataScopes.stream().filter(x -> a.contains(x.getResource())).collect(Collectors.toList());
 		}
 
 		// 当未指定只包含的资源，且指定了排除的资源时，则排除此部分资源的 DataScope
 		if (dataPermissionRule.excludeResources().length > 0) {
 			Set<String> a = new HashSet<>(Arrays.asList(dataPermissionRule.excludeResources()));
-			return dataScopes.stream().filter(x -> !a.contains(x.getResource())).toList();
+			return dataScopes.stream().filter(x -> !a.contains(x.getResource())).collect(Collectors.toList());
 		}
 
 		return dataScopes;
