@@ -13,6 +13,7 @@ import java.math.BigDecimal;
 /**
  * @author lingting 2023-04-18 15:22
  */
+@SuppressWarnings("java:S2447")
 public class BooleanModule extends SimpleModule {
 
 	public BooleanModule() {
@@ -28,36 +29,41 @@ public class BooleanModule extends SimpleModule {
 		@Override
 		public Boolean deserialize(JsonParser jsonParser, DeserializationContext deserializationContext)
 				throws IOException {
-			return switch (jsonParser.getCurrentToken()) {
-				case NOT_AVAILABLE, VALUE_NULL -> null;
-				case VALUE_STRING -> {
+			switch (jsonParser.getCurrentToken()) {
+				case NOT_AVAILABLE:
+				case VALUE_NULL:
+					return null;
+				case VALUE_STRING:
 					String text = jsonParser.getText().trim().toLowerCase();
 					if (BooleanUtils.isTrue(text)) {
-						yield true;
+						return true;
 					}
 					if (BooleanUtils.isFalse(text)) {
-						yield false;
+						return false;
 					}
+
 
 					// 转数值
 					try {
 						BigDecimal decimal = new BigDecimal(text);
-						yield byNumber(decimal);
+						return byNumber (decimal);
 					}
 					catch (Exception e) {
 						throw new JsonParseException(jsonParser,
-								"Converting text [%s] to Boolean is not supported!".formatted(text), e);
+							String.format("Converting text [%s] to Boolean is not supported!",text), e);
 					}
-				}
-				case VALUE_NUMBER_INT, VALUE_NUMBER_FLOAT -> {
+				case VALUE_NUMBER_INT:
+				case VALUE_NUMBER_FLOAT:
 					BigDecimal decimal = jsonParser.getDecimalValue();
-					yield byNumber(decimal);
-				}
-				case VALUE_TRUE -> true;
-				case VALUE_FALSE -> false;
-				default -> throw new JsonParseException(jsonParser,
-						"Unable to convert type [%s] to boolean!".formatted(jsonParser.getCurrentToken()));
-			};
+					return byNumber (decimal);
+				case VALUE_TRUE:
+					return true;
+				case VALUE_FALSE:
+					return false;
+				default:
+					throw new JsonParseException(jsonParser,
+						String.format("Unable to convert type [%s] to boolean!",jsonParser.getCurrentToken()));
+			}
 
 		}
 
